js file changes

--- a/index.html
+++ b/index.html
@@ -14,31 +14,51 @@
 <body>
   <main>
     <!-- Rating state start -->
-   <div class="container">
-     <div class="main-content">
-       <div class="img">
-         <img src="images/icon-star.svg" alt="icon-star">
-       </div>
-       <div class="score">
-        <p></p>
-       </div>
-       <div class="content">
-         <h1>How did we do?</h1>
-         <p>Please let us know how we did with your support request. All feedback is appreciated 
-           to help us improve our offering!</p>
-       </div>
-       <div class="rating">
-         <button class="rate">1</button>
-         <button class="rate">2</button>
-         <button class="rate">3</button>
-         <button class="rate">4</button>
-         <button class="rate">5</button>
-       </div>
-       <div>
-        <button class="btn">Submit</button>
-       </div>
-     </div>
-   </div>
+    <div class="rating-container">
+      <div class="container">
+        <div class="main-content">
+          <div class="img">
+            <img src="images/icon-star.svg" alt="icon-star">
+          </div>
+          <div class="content">
+            <h1>How did we do?</h1>
+            <p>Please let us know how we did with your support request. All feedback is appreciated 
+              to help us improve our offering!</p>
+          </div>
+          <div class="rating">
+            <button class="rate">1</button>
+            <button class="rate">2</button>
+            <button class="rate">3</button>
+            <button class="rate">4</button>
+            <button class="rate">5</button>
+          </div>
+          <div>
+           <button class="btn">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Rating state end -->
+
+    <!-- Thank you start -->
+    <div class="thank-you-container">
+      <div class="container">
+        <div class="thank-you-content">
+          <div class="thanks-image">
+            <img src="images/illustration-thank-you.svg" alt="illustration-thank-you">
+          </div>
+          <div class="score">
+           <p></p>
+          </div>
+          <div class="content">
+            <h1>Thank you!</h1>
+            <p>We appreciate you taking the time to give a rating. If you ever need more
+               support, don’t hesitate to get in touch!</p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <!-- Thank you end -->
  </main>
   <footer>
     <div class="attribution">
@@ -46,6 +66,6 @@
       Coded by <a href="https://github.com/ChelseaChanu?tab=repositories">Chelsea Chanu</a>.
     </div>
   </footer>
-  <script src="script.js" charset="UTF-8"></script>
+  <script src="script.js"></script>
 </body>
 </html>
